<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown"
    tools:context=".PlayerName">

    <TextView
        android:id="@+id/EnterNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/Enter_name"
        android:textSize="30sp"
        android:textColor="@color/gray"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        />
    <TextView
        android:id="@+id/player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/EnterNames"
        app:layout_constraintTop_toBottomOf="@id/EnterNames"
        android:text="@string/player1"
        android:textSize="20sp"
        android:textColor="@color/red"
        android:layout_marginTop="80dp"
        />
    <EditText
        android:id="@+id/editPlayer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/player1"
        android:hint="@string/name_hint"
        android:autofillHints="name"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:layout_marginHorizontal="80dp"/>
    <TextView
        android:id="@+id/player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/EnterNames"
        app:layout_constraintTop_toBottomOf="@id/editPlayer1"
        android:text="@string/player2"
        android:textSize="20sp"
        android:textColor="@color/blue"
        android:layout_marginTop="80dp"
        />
    <EditText
        android:id="@+id/editPlayer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/player2"
        android:hint="@string/name_hint"
        android:autofillHints="name"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:layout_marginHorizontal="80dp"/>
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editPlayer2"
        android:layout_marginTop="60dp"
        android:text="@string/submit_names"
        android:paddingHorizontal="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@color/sky_blue"
        />

</androidx.constraintlayout.widget.ConstraintLayout>